[tool.poetry]
name = "shopping_cart"
version = "0.1.0"
description = ""
authors = ["kara <karahanozturk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

